Prepare props for names of buttons

--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -1,9 +1,10 @@
 button,
 a {
   font: inherit;
+  font-size: 0.8rem;
   border: 1px solid #cf0056;
   background: #cf0056;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.4rem;
   color: white;
   border-radius: 5px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
