--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -22,6 +22,9 @@
 
 .content {
   padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 footer {
   padding: 1rem;
