--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -1,8 +1,11 @@
 .homepage {
   &__dogs {
-    width: 100%;
+    width: 80%;
+    max-height: 80vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    margin: 10vh auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, 150px);
-    grid-gap: 1rem;
   }
 }
