--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -25,6 +25,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  img {
+    max-width: 100%;
+    max-height: 50vh;
+  }
 }
 footer {
   padding: 1rem;
